tests/baselines/reference/paramPropertiesInSignatures.errors.txt
==== tests/cases/compiler/paramPropertiesInSignatures.ts (5 errors) ====
    class C1 {
        constructor(public p1:string); // ERROR
                 ~~~~~~
!!! error TS1083: Parameter property declarations cannot be used in a constructor overload.
        constructor(private p2:number); // ERROR
                 ~~~~~~~
!!! error TS1083: Parameter property declarations cannot be used in a constructor overload.
        constructor(public p3:any) {} // OK
    }
    
    declare class C2 {
        constructor(public p1:string); // ERROR
                 ~~~~~~
!!! error TS1040: Parameter property declarations can only be used in a non-ambient constructor declaration.
        constructor(private p2:number); // ERROR
                 ~~~~~~~
!!! error TS1040: Parameter property declarations can only be used in a non-ambient constructor declaration.
        constructor(public p3:any); // ERROR
                 ~~~~~~
!!! error TS1040: Parameter property declarations can only be used in a non-ambient constructor declaration.
    }